# ai-coffee-shop

./: LICENSE  README.md  makefile  menu.json  pyproject.toml
app/: constants.py  logger.py  main.py  order_service.py
app/agents/: constants.py  customer.py  waiter.py
app/clients/: menu_service_client.py
app/models/: categories.py  menu.py  order.py  product.py  upsell.py
menu_service/: upsells.json
tests/: conftest.py  test_order_service.py
tests/clients/menu_service_client/: test_get_products.py  test_get_upsells.py
