[project]
name = "ai-coffee-shop"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "faker>=37.11.0",
    "mypy>=1.18.2",
    "polyfactory>=2.22.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 79
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # imports
    "B",  # bugbear
]
exclude = [
    ".venv",
]

[tool.mypy]
exclude = "(\\.venv|tests)"
ignore_missing_imports = false
strict = false
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
addopts = "--strict-markers -v --cov --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["./app"]
omit = ["tests/*", ".venv/*"]
